# duckdb-warc

./: Cargo.toml  Makefile
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs  loader.rs  schema.rs
