[package]
name = "duckdb-warc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.4.4", features = ["vtab-loadable"] }
glob = "0.3.3"
jiff = "0.2.16"
libduckdb-sys = { version = "=1.4.4", features = ["loadable-extension"] }
warc = "=0.3.3"
