[package]
name = "duckdb-warc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[features]
default = ["http"]
http = ["ureq", "url"]

[dependencies]
duckdb = { version = "=1.10502.0", features = ["loadable-extension"] }
flate2 = "1"
glob = "0.3.3"
jiff = "0.2.16"
ureq = { version = "3", optional = true }
url = { version = "2", optional = true }
warc = "=0.3.3"
